# sk-with-local-slm

./: pyproject.toml
00-slocal-slm-setup/: chat-local-llm-with-history-en.py  chat-local-llm-with-history.py  chat-local-llm.py  chat-local-llm2.py  run-model.py
script/utils/: memory_flusher.py
